using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationClipNames
{
    public readonly string Injection = "Injection";
    public readonly string GainMuscle = "GainMuscle";
    public readonly string Transformation = "Transformation";
    public readonly string Run = "Run";
    public readonly string SumoRun = "RunSumo";
    public readonly string Hitted = "Hitted";
    public readonly string Attack = "Attack";
}
